--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1>TechFuture Summit</h1>
+    TechFuture Summit
     </header>
     
     <section id="informacoes">
