Final index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechConnect - Evento</title>
     <link rel="stylesheet" href="style.css">
-    <script src="java.js"></script>
 </head>
 <body>
     <header>
@@ -21,7 +20,7 @@
             <div>
     <h3>Informações</h3>
             </div>
-            <p>Endereço: Rua Clóvis Bevilácqua, S/N - Praia do Flamengo, Salvador - BA, 41603-120</p>
+            <p>Endereço: Rua Clóvis Bevilácqua, S/N - Praia do Flamengo, Salvador - BA, 41603-120 <a href="https://maps.app.goo.gl/TJzfy6wKV7SDzYUB9"><img src="" width="25px" height="25px" style="border-radius: 20px;"></a></p>
             <p>Data do evento: 03/08/2025</p>
             <p>Um encontro único de desenvolvedores e designers para discutir tendências em tecnologia e design.</p>
         </div>
@@ -38,11 +37,11 @@
         <div class="ogro" id="ogro1">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1">
+                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek1</h3>
-                <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
+                <p style="border-radius: 30px; background: linear-gradient( black, #C9822C);" >Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
                     Labore impedit alias nisi eum vel magni error? <br> Cupiditate dolor, 
                     iste temporibus <br>dolorum amet aspernatur. 
                     Deleniti alias, <br>iusto quod rem explicabo blanditiis.</p>
@@ -53,11 +52,11 @@
         <div class="ogro" id="ogro2">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1">
+                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek2</h3>
-                <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
+                <p style="border-radius: 30px; background: linear-gradient( black, #C9822C);">Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
                     Labore impedit alias nisi eum vel magni error? <br> Cupiditate dolor, 
                     iste temporibus <br>dolorum amet aspernatur. 
                     Deleniti alias, <br>iusto quod rem explicabo blanditiis.</p>
@@ -68,11 +67,11 @@
         <div class="ogro" id="ogro3">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1">
+                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek3</h3>
-                <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
+                <p style="border-radius: 30px; background: linear-gradient( black, #C9822C);">Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
                     Labore impedit alias nisi eum vel magni error? <br> Cupiditate dolor, 
                     iste temporibus <br>dolorum amet aspernatur. 
                     Deleniti alias, <br>iusto quod rem explicabo blanditiis.</p>
@@ -83,11 +82,11 @@
         <div class="ogro" id="ogro4">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1">
+                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek4</h3>
-                <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
+                <p style="border-radius: 30px; background: linear-gradient( black, #C9822C);">Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. <br> 
                     Labore impedit alias nisi eum vel magni error? <br> Cupiditate dolor, 
                     iste temporibus <br>dolorum amet aspernatur. 
                     Deleniti alias, <br>iusto quod rem explicabo blanditiis.</p>
@@ -98,7 +97,7 @@
     </section>
     <h2>Participe dessa jornada de conhecimento!</h2>
     <section id="formulario">
-        <form onsubmit="Menssagem()">
+        <form action="concluido.html">
 
             <h2>Coloque suas informações para contato:</h2>
             <br><br>
@@ -129,7 +128,6 @@
             <br>
             
             <button type="submit" >Enviar</button>
-
         </form>
     </section>
         
