Final index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div>
     <h3>Informações</h3>
             </div>
-            <p>Endereço: Rua Clóvis Bevilácqua, S/N - Praia do Flamengo, Salvador - BA, 41603-120 <a href="https://maps.app.goo.gl/TJzfy6wKV7SDzYUB9"><img src="" width="25px" height="25px" style="border-radius: 20px;"></a></p>
+            <p>Endereço: Rua Clóvis Bevilácqua, S/N - Praia do Flamengo, Salvador - BA, 41603-120 <a href="https://maps.app.goo.gl/TJzfy6wKV7SDzYUB9" target="_blank"><img src="imagens/06-google-maps-removebg-preview.png" width="25px" height="25px" style="border-radius: 20px;"></a></p>
             <p>Data do evento: 03/08/2025</p>
             <p>Um encontro único de desenvolvedores e designers para discutir tendências em tecnologia e design.</p>
         </div>
