--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechConnect - Evento</title>
     <link rel="stylesheet" href="style.css">
+    <script src="/script.js"></script>
 </head>
 <body>
     <header>
@@ -37,7 +38,7 @@
         <div class="ogro" id="ogro1">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
+                _dlCOD4rRP9r_A&s" alt="a" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek1</h3>
@@ -52,7 +53,7 @@
         <div class="ogro" id="ogro2">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
+                _dlCOD4rRP9r_A&s" alt="a" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek2</h3>
@@ -67,7 +68,7 @@
         <div class="ogro" id="ogro3">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
+                _dlCOD4rRP9r_A&s" alt="a" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek3</h3>
@@ -82,7 +83,7 @@
         <div class="ogro" id="ogro4">
             <div class="img-ogro">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxKorVHZsXyn4y4YrCl6PT
-                _dlCOD4rRP9r_A&s" alt="a" border="1" style="border-radius: 5px">
+                _dlCOD4rRP9r_A&s" alt="a" style="border-radius: 5px">
             </div>
             <div class="info-ogro">
                 <h3>Shrek4</h3>
@@ -97,7 +98,7 @@
     </section>
     <h2>Participe dessa jornada de conhecimento!</h2>
     <section id="formulario">
-        <form action="concluido.html">
+        <form onsubmit="menssagem()">
 
             <h2>Coloque suas informações para contato:</h2>
             <br><br>
